Poprawki w Double Pendulum - Wstęp, Kod C++

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -35,11 +35,20 @@
 }
 
 @online{double_pendulum,
-  author = {IDC},
-  title = {{Wahadło podwójne}},
+  author = {Krzysztof Jankowski},
+  title = {{Dynamics of double pendulum
+with parametric vertical excitation}},
   howpublished = "\newline \url{https://web.archive.org/web/*/http://www.team.kdm.p.lodz.pl/master/Jankowski.pdf/}",
   year = { }
 }
+
+@online{double_pendulum_book,
+  author = {Gregory L. Baker, James A. Blackburn},
+  title = {{The Pendulum A Case Study in Physics}},
+  howpublished = "\newline \url{https://www.academia.edu/34415707/The_pendulum_A_case_study_in_physics_pdf_pdf}",
+  year = { }
+}
+
 
 @online{game_of_life,
   author = {IDC},
@@ -66,6 +75,13 @@
   author = {Paul Halpern},
   title = {{O motylach i burzach}},
   howpublished = "\newline \url{https://web.archive.org/web/20100909161235/http://czytelnia.onet.pl/0,1161316,do_czytania.html/}",
+  year = { }
+}
+
+@online{lorenz_dziwne_atraktory,
+  author = {Jarosław Demkowski},
+  title = {{Efekt motyla i dziwne atraktory}},
+  howpublished = "\newline \url{https://silo.tips/download/efekt-motyla-i-dziwne-atraktory}",
   year = { }
 }
 
