Poprawki w Game of Life - Wstęp

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -49,9 +49,44 @@ with parametric vertical excitation}},
   year = { }
 }
 
+@online{game_of_life_zero_cellular_automata,
+  author = {Encyklopedia PWN},
+  title = {{Automat Komórkowy}},
+  howpublished = "\newline \url{https://encyklopedia.pwn.pl/haslo/;3872571}",
+  year = { }
+}
+
+@online{game_of_life_zero_player,
+  author = {Staffan Björk i Jesper Juul},
+  title = {{Zero-Player Games}},
+  howpublished = "\newline \url{https://www.jesperjuul.net/text/zeroplayergames/}",
+  year = { }
+}
+
+@online{game_of_life_story,
+  author = {},
+  title = {{Conway's Game of Life}},
+  howpublished = "\newline \url{https://conwaylife.com/wiki/Conway's_Game_of_Life}",
+  year = { }
+}
+
+@online{game_of_life_methematical_games,
+  author = {Martin Gardner},
+  title = {{The fantastic combinations of John
+Conway's new solitaire game "life"}},
+  howpublished = "\newline \url{https://web.stanford.edu/class/sts145/Library/life.pdf}",
+  year = { }
+}
+
+@online{game_of_life_rules,
+  author = {Chris Lipa},
+  title = {{Conway's Game of Life}},
+  howpublished = "\newline \url{http://pi.math.cornell.edu/~lipa/mec/lesson6.html}",
+  year = { }
+}
 
 @online{game_of_life,
-  author = {IDC},
+  author = {Jędrzej Kołtunowicz},
   title = {{Gra w życie }},
   howpublished = "\newline \url{https://www.sztucznainteligencja.org.pl/sztuczna-inteligencja-gra-w-zycie/}",
   year = { }
