Drobne poprawki, bibliografia, gra w życie

--- a/bibliografia.bib
+++ b/bibliografia.bib
@@ -28,7 +28,7 @@
 }
 
 @online{choroba_vr,
-  author = {IDC},
+  author = {Michał Brzeżański},
   title = {{Choroba Symulatorowa}},
   howpublished = "\newline \url{https://vrpolska.eu/skad-sie-bierze-choroba-symulatorowa/}",
   year = { }
@@ -93,9 +93,16 @@ Conway's new solitaire game "life"}},
 }
 
 @online{game_of_life_wiki,
-  author = {IDC},
+  author = {},
   title = {{Gra w życie }},
   howpublished = "\newline \url{https://en.wikipedia.org/wiki/Conway's_Game_of_Life/}",
+  year = { }
+}
+
+@online{game_of_life_code,
+  author = {sweyns},
+  title = {{GameOfLife}},
+  howpublished = "\newline \url{https://github.com/sweyns/GameOfLife}",
   year = { }
 }
 
