--- a/dyplomWFAMarcinPietrzak.tex
+++ b/dyplomWFAMarcinPietrzak.tex
@@ -483,6 +483,7 @@ Gra w życie Conwaya w pierwotnych założeniach składa się z 4 zasad\cite{gam
 \end{itemize}
 
 
+Na podstawie kodu \cite{game_of_life_code} zrobiłem wersję Gry w Życie, która działa z kontrolerami ruchów VR.
 \subsubsection{Gra w życie - kod}
 
 W C++ kod gry w życie składa się z trzech klas: CellActor, GridActor, GameOfLifeControl
